--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body
 {
     margin: 0px;
+    font-family: "Roboto",sans-serif;
 }
 header 
 {
@@ -16,4 +17,20 @@ header
     text-align: center;
     box-shadow: 0px 3px 3px 1px grey;
    padding: 0.3rem;
+   margin: 0;
+   position: relative;
+}
+main .init
+{
+    background-color: #f3f3f3;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    gap: 1rem;
+    padding: 0.5rem;
+}
+main .init i
+{
+ font-size: 1.5rem;
 }
