--- a/style.css
+++ b/style.css
@@ -34,3 +34,16 @@ main .init i
 {
  font-size: 1.5rem;
 }
+.explorer
+{
+text-align: center;
+}
+.explorer h2
+{
+margin-top: 2rem;
+font-size: 2rem;
+}
+.explorer p
+{
+font-size: 1rem;    
+}
