--- a/sass/Layout/tutto.scss
+++ b/sass/Layout/tutto.scss
@@ -1,22 +1,45 @@
 @use "../Utils/box-shadow";
 @use "../Utils/zoom";
+@use "../Utils/variables";
+
+
 .tutto {
+counter-reset: steps;
  & ol {
 display: flex;
-flex-wrap: wrap;
-@media (max-width : 800) {
+@media (max-width : 1000px) {
 flex-direction: column;
 }
 }    
  & li {
-background: color #f6f6f6;;
-padding: 1rem 2rem;
+position: relative;
+&::before {
+content: counter(steps) ;
+counter-increment: steps;
+height: variables.$base-height*2;
+width: variables.$base-height*2;
+background-color:darkviolet;
+display: grid;
+place-items: center;
+border-radius: 50%;
+position: absolute;
+bottom: variables.$base-height;
+left: variables.$base-height*-0.5;
+}
+list-style-type: none;
+background: color #f6f6f6;
+padding: 1.5rem 2rem;
+border: 1px solid;
 flex-grow: 1;
 border-radius: 1rem;
 @include box-shadow.base-shadow;
 &:hover {
 @include zoom.transform-zoom;
 }
-      }
+& i.fas{
+margin-right: 1rem;
+}    
 
-       }
+}
+
+}
