--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,3 +3,5 @@
 @use "./Layout/init.scss";
 @use "./Layout/explorer.scss";
 @use "./Layout/tutto.scss";
+@use "./Layout/menus.scss";
+@use "./Layout/footer.scss";
