--- a/sass/Base/base.css
+++ b/sass/Base/base.css
@@ -3,28 +3,32 @@
 *,
 ::before,
 ::after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
   margin: 0px;
   font-family: "Roboto", sans-serif;
 }
-main
-{
-padding: 0 7rem;
-@media (max-width:1000px) {
-  padding: 0 1rem;
-  
+
+main {
+  padding: 0 7rem;
 }
+
+@media (max-width: 1000px) {
+  main {
+    padding: 0 1rem;
+  }
 }
-h2
-{
+
+h2 {
   padding: 2rem,0;
   margin: 2rem;
-} 
-a
-{
-text-decoration: none;
-color: black;
-} 
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+/*# sourceMappingURL=base.css.map */
