--- a/sass/Layout/explorer.scss
+++ b/sass/Layout/explorer.scss
@@ -1,8 +1,8 @@
 @use "../Utils/box-shadow"; 
+@use "../Utils/leargradiant";
 .explorer {
     text-align: center;
   & h2 {
-    margin-top: 2rem;
     font-size: 2rem;
   }
   
@@ -19,10 +19,11 @@
     border-radius: 2rem;
 
     //box-shadow: 2px 1px 16px -3px #000000;
-    background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+    //background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
     transition: transform 200ms;
     margin-top: 1rem;
     @include box-shadow.base-shadow;
+    @include leargradiant.lineargradiant(0.9);
   }
   
   & button:hover {
