--- a/sass/Layout/footer.scss
+++ b/sass/Layout/footer.scss
@@ -1,8 +1,20 @@
+//@use "../Utils/colors"; 
 
 footer
 {
-background-color:gray;
-
+background-color:#353535;
+padding: 0 2rem;
+color: white;
+h2
+{
+font-family:"shrikhand","sans-serif";
+font-weight: 500;
+padding: 1rem 0;
+} 
+a
+{
+  color: white;
+}  
 }
 .init {
     background-color: #f3f3f3;
