--- a/sass/Layout/menus.css
+++ b/sass/Layout/menus.css
@@ -1,25 +1,96 @@
+@use "../Utils/leargradiant";
 .menus {
   background-color: #f6f6f6;
-}
-
-.menus h2 {
   margin-bottom: 2rem;
 }
 
 .menus .menus__cards {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
 }
 
-.menus .card {
-  border: 1px solid black;
+@media screen and (max-width: 770px) {
+  .menus .menus__cards {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
 }
 
-.menus .card.card_image {
-  background-image: url(../../images/menu-2.jpg);
+.menus .menus__cards .new {
+  position: relative;
+}
+
+.menus .menus__cards .new::before {
+  content: "Nouveau";
+  position: absolute;
+  height: 2rem;
+  width: 4rem;
+  background-color: #99d2D0;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  right: 1rem;
+  top: 1rem;
+}
+
+.menus .card_image {
+  background-size: cover;
+  height: 15rem;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.menus .card_image1 {
+  background-image: url(./images/men-1.jpg);
+}
+
+.menus .card_image2 {
+  background-image: url(./images/menu-2.jpg);
+}
+
+.menus .card_image3 {
+  background-image: url(./images/menu-3.jpg);
+}
+
+.menus .card_image4 {
+  background-image: url(./images/menu-4.jpg);
+}
+
+.menus .card_description {
+  position: relative;
+  background-color: white;
+  border-radius: 0 0 1rem 1rem;
+}
+
+.menus .card_description h3, .menus .card_description p {
+  padding: 0.3rem;
+}
+
+.menus .card_description i {
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.menus .card .fas {
+  color: transparent;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(red), to(blue));
+  background-image: linear-gradient(red, blue);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  -webkit-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
+}
+
+.menus .card :hover .fas {
+  opacity: 1;
+  -webkit-transform: translateY(-50%) scale(1.2);
+          transform: translateY(-50%) scale(1.2);
 }
 /*# sourceMappingURL=menus.css.map */
