--- a/sass/Layout/menus.scss
+++ b/sass/Layout/menus.scss
@@ -1,21 +1,86 @@
+@use "../Utils/leargradiant";
 .menus {
     background-color: #f6f6f6;
-
-    h2 {
-        margin-bottom: 2rem;
-    }
+    margin-bottom: 2rem;
     .menus__cards {
         display: grid;
-      grid-template-columns: repeat(2*1fr);
+      grid-template-columns: repeat(2,1fr);
         gap: 2rem;
-        
+        @media screen and (max-width:770px) {
+        grid-template-columns:repeat(1,1fr);
+       } 
+       .new
+       {
+      position: relative;
+    }
+    .new::before
+    {
+    content: "Nouveau";
+    position: absolute;
+    height: 2rem;
+    width: 4rem;
+    background-color: #99d2D0;
+    display: grid;
+    place-items:center;
+    right: 1rem;
+    top: 1rem;
+      } 
     }
     .card {
-        border: 1px solid black;
-        & .card_image
+        &_image
          {
-background-image: url(../../images/men-1.jpg);
+background-size: cover;
 height: 15rem;
+border-radius: 1rem 1rem 0 0;
         }
+        &_image1
+        {
+ background-image: url(./images/men-1.jpg);
+   }
+        &_image2
+         {
+ background-image: url(./images/menu-2.jpg);
     }
+    &_image3
+         {
+     background-image: url(./images/menu-3.jpg);       
+    }
+    &_image4
+    {
+    background-image: url(./images/menu-4.jpg);
+    }
+    &_description
+    {
+    position: relative;
+    background-color: white;
+    border-radius: 0 0 1rem 1rem;
+   
+    h3,p
+    {
+padding:  0.3rem;
+    }
+    i
+    {
+    font-size: 2rem;
+    position:absolute;
+    right: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+.fas
+{
+color: transparent;
+background-clip: text;
+-webkit-background-clip: text;
+opacity: 0;
+transition: all 200ms ease-in-out;
+@include leargradiant.lineargradiant(1);
+}  
+& :hover .fas
+{ 
+opacity: 1;
+transform: translateY(-50%) scale(1.2);
+}
+}
 }
