--- a/style.css
+++ b/style.css
@@ -14,6 +14,21 @@ body {
 main {
   padding: 0 7rem;
 }
+@media (max-width: 1000px) {
+  main {
+    padding: 0 1rem;
+  }
+}
+
+h2 {
+  padding: 2rem, 0;
+  margin: 2rem;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
 
 header {
   font-family: "Shrikhand", cursif;
@@ -42,7 +57,6 @@ header {
   text-align: center;
 }
 .explorer h2 {
-  margin-top: 2rem;
   font-size: 2rem;
 }
 .explorer p {
@@ -55,10 +69,10 @@ header {
   padding: 1rem 2rem;
   border: none;
   border-radius: 2rem;
-  background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
   transition: transform 200ms;
   margin-top: 1rem;
   box-shadow: 2px 1px 16px -3px #000000;
+  background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
 }
 .explorer button:hover {
   transform: scale(1.02);
@@ -110,25 +124,89 @@ header {
 
 .menus {
   background-color: #f6f6f6;
-}
-.menus h2 {
   margin-bottom: 2rem;
 }
 .menus .menus__cards {
   display: grid;
-  grid-template-columns: repeat(2fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
 }
-.menus .card {
-  border: 1px solid black;
+@media screen and (max-width: 770px) {
+  .menus .menus__cards {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
-.menus .card .card_image {
-  background-image: url(../../images/men-1.jpg);
+.menus .menus__cards .new {
+  position: relative;
+}
+.menus .menus__cards .new::before {
+  content: "Nouveau";
+  position: absolute;
+  height: 2rem;
+  width: 4rem;
+  background-color: #99d2D0;
+  display: grid;
+  place-items: center;
+  right: 1rem;
+  top: 1rem;
+}
+.menus .card_image {
+  background-size: cover;
   height: 15rem;
+  border-radius: 1rem 1rem 0 0;
+}
+.menus .card_image1 {
+  background-image: url(./images/men-1.jpg);
+}
+.menus .card_image2 {
+  background-image: url(./images/menu-2.jpg);
+}
+.menus .card_image3 {
+  background-image: url(./images/menu-3.jpg);
+}
+.menus .card_image4 {
+  background-image: url(./images/menu-4.jpg);
+}
+.menus .card_description {
+  position: relative;
+  background-color: white;
+  border-radius: 0 0 1rem 1rem;
+}
+.menus .card_description h3, .menus .card_description p {
+  padding: 0.3rem;
+}
+.menus .card_description i {
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.menus .card .fas {
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  transition: all 200ms ease-in-out;
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
+}
+.menus .card :hover .fas {
+  opacity: 1;
+  transform: translateY(-50%) scale(1.2);
 }
 
 footer {
-  background-color: gray;
+  background-color: #353535;
+  padding: 0 2rem;
+  color: white;
+}
+footer h2 {
+  font-family: "shrikhand", "sans-serif";
+  font-weight: 500;
+  padding: 1rem 0;
+}
+footer a {
+  color: white;
 }
 
 .init {
