--- a/sass/Layout/explorer.scss
+++ b/sass/Layout/explorer.scss
@@ -23,7 +23,7 @@
     transition: transform 200ms;
     margin-top: 1rem;
     @include box-shadow.base-shadow;
-    @include leargradiant.lineargradiant(0.9);
+    @include leargradiant.lineargradiant;
   }
   
   & button:hover {
