--- a/sass/Utils/leargradiant.scss
+++ b/sass/Utils/leargradiant.scss
@@ -1,3 +1,3 @@
-@mixin lineargradiant ($opacity){
+@mixin lineargradiant ($opacity:0.9){
     background-image: linear-gradient(to top, rgba(147, 86, 220, $opacity), rgba(255, 121, 218, $opacity));
 }
