--- a/sass/Utils/mixing.scss
+++ b/sass/Utils/mixing.scss
@@ -1,3 +1,9 @@
 @mixin lineargradiant ($opacity:0.9){
     background-image: linear-gradient(to top, rgba(147, 86, 220, $opacity), rgba(255, 121, 218, $opacity));
 }
+@mixin transform-zoom {
+    transform: scale(1.02); 
+}
+@mixin base-shadow {
+    box-shadow: 2px 1px 16px -3px #000000;
+}
