--- a/sass/Layout/menus.css
+++ b/sass/Layout/menus.css
@@ -1,4 +1,5 @@
-@use "../Utils/leargradiant";
+@use "../Utils/variables.scss";
+@use "../Utils/mixing";
 .menus {
   background-color: #f6f6f6;
   margin-bottom: 2rem;
@@ -36,39 +37,82 @@
   top: 1rem;
 }
 
+.menus .card {
+  /*
+      &_image1
+      {
+        background-image: url("./images/menu-1.jpg");             
+      }
+      &_image2
+      {
+        background-image: url("./images/menu-2.jpg");             
+      }
+      &_image3
+      {
+        background-image: url("./images/menu-3.jpg");             
+      }
+      &_image4
+      {
+        background-image: url("./images/menu-4.jpg");             
+      }
+      */
+}
+
 .menus .card_image {
   background-size: cover;
   height: 15rem;
   border-radius: 1rem 1rem 0 0;
 }
 
-.menus .card_image1 {
-  background-image: url(./images/men-1.jpg);
+.menus .card_image-1 {
+  background-image: url("./images/menu-1.jpg");
 }
 
-.menus .card_image2 {
-  background-image: url(./images/menu-2.jpg);
+.menus .card_image-2 {
+  background-image: url("./images/menu-2.jpg");
 }
 
-.menus .card_image3 {
-  background-image: url(./images/menu-3.jpg);
+.menus .card_image-3 {
+  background-image: url("./images/menu-3.jpg");
 }
 
-.menus .card_image4 {
-  background-image: url(./images/menu-4.jpg);
+.menus .card_image-4 {
+  background-image: url("./images/menu-4.jpg");
 }
 
-.menus .card_description {
+.menus_description {
   position: relative;
   background-color: white;
   border-radius: 0 0 1rem 1rem;
+  /*
+&::after
+{
+  @include mixing.heart;
+  @include mixing.lineargradiant(1);
+  opacity: 0;                 
+  color: transparent;
+  font-weight: 900;
+  } 
+  &:hover::after
+  {
+   opacity: 1;
+   transform: translateY(-50%)scale(1.1);
+    }
+  */
 }
 
-.menus .card_description h3, .menus .card_description p {
-  padding: 0.3rem;
+.menus_description::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f004";
 }
 
-.menus .card_description i {
+.menus_description i {
   font-size: 2rem;
   position: absolute;
   right: 1rem;
@@ -77,20 +121,7 @@
           transform: translateY(-50%);
 }
 
-.menus .card .fas {
-  color: transparent;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(red), to(blue));
-  background-image: linear-gradient(red, blue);
-  background-clip: text;
-  -webkit-background-clip: text;
-  opacity: 0;
-  -webkit-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-}
-
-.menus .card :hover .fas {
-  opacity: 1;
-  -webkit-transform: translateY(-50%) scale(1.2);
-          transform: translateY(-50%) scale(1.2);
+.menus_description h3, .menus_description p {
+  padding: 0.3rem;
 }
 /*# sourceMappingURL=menus.css.map */
