--- a/sass/Layout/menus.scss
+++ b/sass/Layout/menus.scss
@@ -1,3 +1,4 @@
+@use "../Utils/variables.scss";
 @use "../Utils/mixing";
 .menus {
     background-color: #f6f6f6;
@@ -33,54 +34,46 @@ background-size: cover;
 height: 15rem;
 border-radius: 1rem 1rem 0 0;
         }
-        &_image1
-        {
- background-image: url(./images/men-1.jpg);
-   }
-        &_image2
-         {
- background-image: url(./images/menu-2.jpg);
-    }
-    &_image3
-         {
-     background-image: url(./images/menu-3.jpg);       
-    }
-    &_image4
-    {
-    background-image: url(./images/menu-4.jpg);
-    }
+        @for $i from 1 through 4 {
+          &_image-#{$i} { 
+            background-image: url(./images/menu-#{$i}.jpg);
+
+        }
+      }
+       
     &_description
     {
     position: relative;
     background-color: white;
     border-radius: 0 0 1rem 1rem;
-   
-    h3,p
+    &::before
+    {
+@include mixing.heart;
+//@include mixing.lineargradiant(1);
+} 
+&::after
+{
+  @include mixing.heart;
+  @include mixing.lineargradiant(1);
+  opacity: 0;
+  color: transparent;
+  font-weight: 900;
+  } 
+  &:hover::after
+  {
+   opacity: 1;
+   transform: translateY(-50%)scale(1.1);
+    } 
+  h3,p
     {
 padding:  0.3rem;
     }
-    i
-    {
-    font-size: 2rem;
-    position:absolute;
-    right: 1rem;
-    top: 50%;
-    transform: translateY(-50%);
   }
 }
-.fas
-{
-color: transparent;
-background-clip: text;
--webkit-background-clip: text;
-opacity: 0;
-transition: all 200ms ease-in-out;
-@include mixing.lineargradiant(1);
-}  
-& :hover .fas
-{ 
-opacity: 1;
-transform: translateY(-50%) scale(1.2);
 }
-}
-}
+ 
+//& :hover .fas
+//{ 
+//opacity: 1;
+//transform: translateY(-50%) scale(1.2);
+//}
