--- a/sass/Utils/mixing.scss
+++ b/sass/Utils/mixing.scss
@@ -7,3 +7,26 @@
 @mixin base-shadow {
     box-shadow: 2px 1px 16px -3px #000000;
 }
+@mixin heart {
+   
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;  
+    -webkit-font-smoothing: antialiased;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 400;
+    content: "\f004";
+    font-size: 2rem;
+    position:absolute;
+    right: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    color: inherit;
+    background-clip: text;
+   -webkit-background-clip: text;
+    opacity: 1;
+    transition: all 200ms ease-in-out;
+
+
+}
