--- a/style.css
+++ b/style.css
@@ -155,16 +155,16 @@ header {
   height: 15rem;
   border-radius: 1rem 1rem 0 0;
 }
-.menus .card_image1 {
-  background-image: url(./images/men-1.jpg);
+.menus .card_image-1 {
+  background-image: url(./images/menu-1.jpg);
 }
-.menus .card_image2 {
+.menus .card_image-2 {
   background-image: url(./images/menu-2.jpg);
 }
-.menus .card_image3 {
+.menus .card_image-3 {
   background-image: url(./images/menu-3.jpg);
 }
-.menus .card_image4 {
+.menus .card_image-4 {
   background-image: url(./images/menu-4.jpg);
 }
 .menus .card_description {
@@ -172,27 +172,56 @@ header {
   background-color: white;
   border-radius: 0 0 1rem 1rem;
 }
-.menus .card_description h3, .menus .card_description p {
-  padding: 0.3rem;
-}
-.menus .card_description i {
+.menus .card_description::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+  content: "\f004";
   font-size: 2rem;
   position: absolute;
   right: 1rem;
   top: 50%;
   transform: translateY(-50%);
-}
-.menus .card .fas {
-  color: transparent;
+  color: inherit;
   background-clip: text;
   -webkit-background-clip: text;
-  opacity: 0;
+  opacity: 1;
+  transition: all 200ms ease-in-out;
+}
+.menus .card_description::after {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+  content: "\f004";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: inherit;
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 1;
   transition: all 200ms ease-in-out;
   background-image: linear-gradient(to top, #9356dc, #ff79da);
+  opacity: 0;
+  color: transparent;
+  font-weight: 900;
 }
-.menus .card :hover .fas {
+.menus .card_description:hover::after {
   opacity: 1;
-  transform: translateY(-50%) scale(1.2);
+  transform: translateY(-50%) scale(1.1);
+}
+.menus .card_description h3, .menus .card_description p {
+  padding: 0.3rem;
 }
 
 footer {
